removed config and tested init load on yearly basis

--- a/Toggle_to_PostgreSQL.ipynb
+++ b/Toggle_to_PostgreSQL.ipynb
@@ -87,6 +87,7 @@
     }
    ],
    "source": [
+    "# Script to download data from Toggl and insert it into PostgreSQL\n",
     "import psycopg2\n",
     "import configparser\n",
     "import requests\n",
@@ -156,7 +157,8 @@
     "    config = configparser.ConfigParser()\n",
     "    config.read('config.ini')\n",
     "    api_token = config.get('Toggl', 'api_token')\n",
-    "    mode = config.get('Download', 'mode')\n",
+    "    mode = config.get('Download', 'mode') #grab the year as the first 4 characters of the string under the [Payload] section with the name since\n",
+    "    year = config.get('Payload', 'since')[0:4]\n",
     "\n",
     "    if mode == 'init':\n",
     "        since_date = config.get('Payload', 'since')\n",
@@ -191,6 +193,243 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully fetched page 1\n",
+      "Successfully fetched page 2\n",
+      "Successfully fetched page 3\n",
+      "Successfully fetched page 4\n",
+      "Successfully fetched page 5\n",
+      "Successfully fetched page 6\n",
+      "Successfully fetched page 7\n",
+      "Successfully fetched page 8\n",
+      "Successfully fetched page 9\n",
+      "Successfully fetched page 10\n",
+      "Successfully fetched page 11\n",
+      "Successfully fetched page 12\n",
+      "Successfully fetched page 13\n",
+      "Successfully fetched page 14\n",
+      "Successfully fetched page 15\n",
+      "Successfully fetched page 16\n",
+      "Successfully fetched page 17\n",
+      "Successfully fetched page 18\n",
+      "Successfully fetched page 19\n",
+      "Successfully fetched page 20\n",
+      "Successfully fetched page 21\n",
+      "Successfully fetched page 22\n",
+      "Successfully fetched page 23\n",
+      "Successfully fetched page 24\n",
+      "Successfully fetched page 25\n",
+      "Successfully fetched page 26\n",
+      "Successfully fetched page 27\n",
+      "Successfully fetched page 28\n",
+      "Successfully fetched page 29\n",
+      "Successfully fetched page 30\n",
+      "Successfully fetched page 31\n",
+      "Successfully fetched page 32\n",
+      "Successfully fetched page 33\n",
+      "Successfully fetched page 34\n",
+      "Successfully fetched page 35\n",
+      "Successfully fetched page 36\n",
+      "Successfully fetched page 37\n",
+      "Successfully fetched page 38\n",
+      "Successfully fetched page 39\n",
+      "Successfully fetched page 40\n",
+      "Successfully fetched page 41\n",
+      "Successfully fetched page 42\n",
+      "Successfully fetched page 43\n",
+      "Successfully fetched page 44\n",
+      "Successfully fetched page 45\n",
+      "Successfully fetched page 46\n",
+      "Successfully fetched page 47\n",
+      "Successfully fetched page 48\n",
+      "Successfully fetched page 49\n",
+      "Successfully fetched page 50\n",
+      "Successfully fetched page 51\n",
+      "Successfully fetched page 52\n",
+      "Successfully fetched page 53\n",
+      "Successfully fetched page 54\n",
+      "Successfully fetched page 55\n",
+      "Successfully fetched page 56\n",
+      "Successfully fetched page 57\n",
+      "Successfully fetched page 58\n",
+      "Successfully fetched page 59\n",
+      "Successfully fetched page 60\n",
+      "Successfully fetched page 61\n",
+      "Successfully fetched page 62\n",
+      "Successfully fetched page 63\n",
+      "Successfully fetched page 64\n",
+      "Inserted data for workspace 1345262 from 2023-01-01 to 2024-01-01\n",
+      "            id         user_name                                    Client  \\\n",
+      "0   3152763808  Charlotte Jordan  Senec - RightPeopleGroup | DBI Analytics   \n",
+      "1   3152732687   Tobias Eichhorn           AXA - Westhouse | DBI Analytics   \n",
+      "2   3152649770  Charlotte Jordan                 AXA - DBI | DBI Analytics   \n",
+      "3   3152649759         Jan Busse                 AXA - DBI | DBI Analytics   \n",
+      "4   3152648542        Alex Below                 AXA - DBI | DBI Analytics   \n",
+      "..         ...               ...                                       ...   \n",
+      "95  3142270291       David Chang                 AXA - DBI | DBI Analytics   \n",
+      "96  3142021697   Tobias Eichhorn            Internal - DBI | DBI Analytics   \n",
+      "97  3142024124        Alex Below                 AXA - DBI | DBI Analytics   \n",
+      "98  3141943880   Tobias Eichhorn           AXA - Westhouse | DBI Analytics   \n",
+      "99  3142023495        Alex Below                 AXA - DBI | DBI Analytics   \n",
+      "\n",
+      "                      Project                           Description  Billable  \\\n",
+      "0   SENEC | Projektmanagement           Status Aktualisierung Senec      True   \n",
+      "1     AXA | Projektmanagement        Teilnahme Project Planning Axa      True   \n",
+      "2    AXA | NPS Pytle Use Case                    Planning Poker NPS      True   \n",
+      "3    AXA | NPS Pytle Use Case                      Projektschätzung      True   \n",
+      "4    AXA | NPS Pytle Use Case                        Planning-Poker      True   \n",
+      "..                        ...                                   ...       ...   \n",
+      "95   AXA | NPS Pytle Use Case  NPS Qualitätssicherung und Bugfixing      True   \n",
+      "96         DBI | HR and Sales               Vorbereitung Sales-Call     False   \n",
+      "97   AXA | NPS Pytle Use Case               AXA - Dataset Anpassung      True   \n",
+      "98    AXA | Projektmanagement        Teilnahme Project Planning Axa      True   \n",
+      "99   AXA | NPS Pytle Use Case                AXA - Project Planning      True   \n",
+      "\n",
+      "    Start_date Start_time    End_date  End_time  Duration_ms  \\\n",
+      "0   2023-10-04   11:10:53  2023-10-04  11:32:25      1292000   \n",
+      "1   2023-10-04   10:30:00  2023-10-04  11:00:00      1800000   \n",
+      "2   2023-10-04   10:02:43  2023-10-04  10:52:42      2999000   \n",
+      "3   2023-10-04   10:02:43  2023-10-04  11:00:43      3480000   \n",
+      "4   2023-10-04   10:02:10  2023-10-04  10:52:58      3048000   \n",
+      "..         ...        ...         ...       ...          ...   \n",
+      "95  2023-09-26   19:35:28  2023-09-26  20:35:28      3600000   \n",
+      "96  2023-09-26   17:07:02  2023-09-26  17:54:41      2859000   \n",
+      "97  2023-09-26   17:05:00  2023-09-26  18:08:02      3782000   \n",
+      "98  2023-09-26   16:30:01  2023-09-26  17:04:52      2091000   \n",
+      "99  2023-09-26   16:30:00  2023-09-26  16:45:00       900000   \n",
+      "\n",
+      "                    Tags  \n",
+      "0                     []  \n",
+      "1                     []  \n",
+      "2   [Project Management]  \n",
+      "3     [Align (internal)]  \n",
+      "4             [Planning]  \n",
+      "..                   ...  \n",
+      "95           [Debugging]  \n",
+      "96    [Align (internal)]  \n",
+      "97             [Dataset]  \n",
+      "98    [Align (internal)]  \n",
+      "99             [Meeting]  \n",
+      "\n",
+      "[100 rows x 12 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Script to download data from Toggl and insert it into PostgreSQL\n",
+    "import psycopg2\n",
+    "import configparser\n",
+    "import requests\n",
+    "import json\n",
+    "import os\n",
+    "from datetime import datetime, timedelta\n",
+    "import pandas as pd\n",
+    "\n",
+    "def get_workspaces(api_token):\n",
+    "    headers = {\n",
+    "        \"Content-Type\": \"application/json\",\n",
+    "    }\n",
+    "    response = requests.get(\n",
+    "        'https://api.track.toggl.com/api/v9/workspaces',\n",
+    "        headers=headers,\n",
+    "        auth=(api_token, 'api_token')\n",
+    "    )\n",
+    "    response.raise_for_status()\n",
+    "    return response.json()\n",
+    "\n",
+    "def get_detailed_report(api_token, workspace_id, since_date, until_date):\n",
+    "    report_data = []\n",
+    "    headers = {\n",
+    "        \"Content-Type\": \"application/json\",\n",
+    "    }\n",
+    "    page = 1\n",
+    "    while True:\n",
+    "        response = requests.get(\n",
+    "            f'https://api.track.toggl.com/reports/api/v2/details?workspace_id={workspace_id}&since={since_date}&until={until_date}&user_agent=api_test&page={page}',\n",
+    "            headers=headers,\n",
+    "            auth=(api_token, 'api_token')\n",
+    "        )\n",
+    "        response.raise_for_status()\n",
+    "        data = response.json()\n",
+    "        report_data.extend(data['data'])\n",
+    "\n",
+    "        print(f'Successfully fetched page {page}')\n",
+    "        page += 1\n",
+    "\n",
+    "        if not data['data']:\n",
+    "            break\n",
+    "    return report_data\n",
+    "\n",
+    "def process_data(data):\n",
+    "    processed_data = []\n",
+    "    for item in data:\n",
+    "        processed_item = {\n",
+    "            \"id\" : item.get(\"id\", \"\"),\n",
+    "            \"user_name\": item.get(\"user\", \"\"),\n",
+    "            \"Client\": item.get(\"client\", \"\"),\n",
+    "            \"Project\": item.get(\"project\", \"\"),\n",
+    "            \"Description\": item.get(\"description\", \"\"),\n",
+    "            \"Billable\": item.get(\"is_billable\", \"\"),\n",
+    "            \"Start_date\": item[\"start\"].split('T')[0] if \"start\" in item else \"\",\n",
+    "            \"Start_time\": item[\"start\"].split('T')[1].split('+')[0] if \"start\" in item else \"\",\n",
+    "            \"End_date\": item[\"end\"].split('T')[0] if \"end\" in item else \"\",\n",
+    "            \"End_time\": item[\"end\"].split('T')[1].split('+')[0] if \"end\" in item else \"\",\n",
+    "            \"Duration_ms\": item.get(\"dur\", \"\"),\n",
+    "            \"Tags\": item[\"tags\"] if \"tags\" in item and item[\"tags\"] else []\n",
+    "        }\n",
+    "        processed_data.append(processed_item)\n",
+    "    return pd.DataFrame(processed_data)\n",
+    "\n",
+    "def main():\n",
+    "    config = configparser.ConfigParser()\n",
+    "    config.read('config.ini')\n",
+    "    api_token = config.get('Toggl', 'api_token')\n",
+    "    mode = config.get('Download', 'mode')\n",
+    "    year = config.get('Payload', 'since')[0:4]\n",
+    "\n",
+    "    if mode == 'init':\n",
+    "        since_date = config.get('Payload', 'since')\n",
+    "        until_date = config.get('Payload', 'until')\n",
+    "    else:  # mode is 'recurring'\n",
+    "        days_back = config.getint('Download', 'recurring_days_back')\n",
+    "        until_date = datetime.today()\n",
+    "        since_date = (until_date - timedelta(days=days_back)).strftime('%Y-%m-%d')\n",
+    "        until_date = until_date.strftime('%Y-%m-%d')\n",
+    "\n",
+    "\n",
+    "    host = config.get('PostgreSQL', 'host')\n",
+    "    dbname = config.get('PostgreSQL', 'dbname')\n",
+    "    user = config.get('PostgreSQL', 'user')\n",
+    "    password = config.get('PostgreSQL', 'password')\n",
+    "\n",
+    "\n",
+    "    workspaces = get_workspaces(api_token)\n",
+    "    data = []\n",
+    "    for workspace in workspaces:\n",
+    "        workspace_id = workspace['id']\n",
+    "        report_data = get_detailed_report(api_token, workspace_id, since_date, until_date)\n",
+    "        data.extend(report_data)\n",
+    "        print(f'Inserted data for workspace {workspace_id} from {since_date} to {until_date}')\n",
+    "\n",
+    "    df = process_data(data)\n",
+    "    df.to_csv(f'toggl_data_{year}.csv', index=False)\n",
+    "    print(df.head(100))\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n",
+    "# save the data to a csv file\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -527,6 +766,13 @@
     "# Print the response JSON\n",
     "print(response.json())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
